prep/nginx-plus-ingress-sm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress
  namespace: nginx-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-ingress
  template:
    metadata:
      labels:
        app: nginx-ingress
        nsm.nginx.com/deployment: nginx-ingress
        spiffe.io/spiffeid: "true"
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9113"
        prometheus.io/scheme: http
        nsm.nginx.com/enable-ingress: "true"
        nsm.nginx.com/enable-egress: "true"
    spec:
      serviceAccountName: nginx-ingress
      containers:
      - image: registry.example.com/root/nic/nginxplus-ingress-nap-dos:2.1.0
        imagePullPolicy: IfNotPresent
        name: nginx-plus-ingress
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        - name: readiness-port
          containerPort: 8081
        - name: prometheus
          containerPort: 9113
        readinessProbe:
          httpGet:
            path: /nginx-ready
            port: readiness-port
          periodSeconds: 1
        securityContext:
          allowPrivilegeEscalation: true
          runAsUser: 101 #nginx
          capabilities:
            drop:
            - ALL
            add:
            - NET_BIND_SERVICE
        volumeMounts:
        - mountPath: /run/spire/sockets
          name: spire-agent-socket
        args:
          - -nginx-plus
          - -nginx-configmaps=$(POD_NAMESPACE)/nginx-config
          - -default-server-tls-secret=$(POD_NAMESPACE)/default-server-secret
          - -enable-app-protect
          - -enable-app-protect-dos
         #- -v=3 # Enables extensive logging. Useful for troubleshooting.
         #- -report-ingress-status
         #- -external-service=nginx-ingress
          - -enable-prometheus-metrics
         #- -global-configuration=$(POD_NAMESPACE)/nginx-configuration
          - -enable-preview-policies
          - -enable-snippets
          - -spire-agent-address=/run/spire/sockets/agent.sock
          - -enable-latency-metrics
          #- -enable-internal-routes
          # Needed for UDP
          # - -enable-preview-policies
          # - -global-configuration=nginx-ingress/nginx-configuration
      volumes:
      - hostPath:
          path: /run/spire/sockets
          type: DirectoryOrCreate
        name: spire-agent-socket
